--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social 70 +</title>
     <link rel="stylesheet" href="./design/style.css">
+    <link rel="stylesheet" href="./design/tablet.css" media="screen and (min-width: 600px)">
+    <link rel="stylesheet" href="./design/desktop.css" media="screen and (min-width: 800px)">
 </head>
 <body>
     <img src="./design/logos/logo-social70plus.png" alt="logo">
