--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social 70 +</title>
-    <link rel="stylesheet" href="./design/style.css">
-    <link rel="stylesheet" href="./design/tablet.css" media="screen and (min-width: 600px)">
-    <link rel="stylesheet" href="./design/desktop.css" media="screen and (min-width: 800px)">
-</head>
-<body>
-    <img src="./design/logos/logo-social70plus.png" alt="logo">
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./design/style.css" />
+    <link
+      rel="stylesheet"
+      href="./design/tablet.css"
+      media="screen and (min-width: 600px)"
+    />
+    <link
+      rel="stylesheet"
+      href="./design/desktop.css"
+      media="screen and (min-width: 800px)"
+    />
+  </head>
+  <body>
+
+    <div class="container-welcome">
+<div class="main-welcome">
+      <figure class="logo">
+        <img src="./design/logos/logo-social70plus.png" alt="logo" />
+      </figure>
+
+      <div class="greetings">
+        <h2>Social 70+</h2>
+        <p>Como experto en la tecnologia</p>
+      </div>
+    </div>
+
+    </div>
+  </body>
 </html>
